[gd_scene load_steps=80 format=2]

[ext_resource path="res://assets/sprite-bird-20.png" type="Texture" id=1]
[ext_resource path="res://scripts/Personaje.gd" type="Script" id=2]

[sub_resource type="Animation" id=46]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "default" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=124]
resource_name = "mode_down"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "down" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.2 ]
}

[sub_resource type="Animation" id=139]
resource_name = "move_left"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -50.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "up" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.5, 4.0, 1.1 ]
}

[sub_resource type="Animation" id=138]
resource_name = "move_right"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "up", "up" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.5, 1.8 ]
}

[sub_resource type="Animation" id=45]
resource_name = "move_up"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "up", "up" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.2, 2.0 ]
}

[sub_resource type="Animation" id=154]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=155]
resource_name = "take_damage"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:collision_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../AreaDamage:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../AreaDamage:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0
height = 35.0

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 314 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 314 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 240, 314 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 720, 0, 240, 314 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 240, 314 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 314, 240, 314 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 314, 240, 314 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 314, 240, 314 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 720, 314, 240, 314 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 314, 240, 314 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 628, 240, 314 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 628, 240, 314 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 628, 240, 314 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 720, 628, 240, 314 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 628, 240, 314 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 942, 240, 314 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 942, 240, 314 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 942, 240, 314 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 720, 942, 240, 314 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 942, 240, 314 )

[sub_resource type="AtlasTexture" id=125]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 942, 240, 314 )

[sub_resource type="AtlasTexture" id=135]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 942, 240, 314 )

[sub_resource type="AtlasTexture" id=126]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 942, 240, 314 )

[sub_resource type="AtlasTexture" id=136]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 942, 240, 314 )

[sub_resource type="AtlasTexture" id=137]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 942, 240, 314 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 314 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 314 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 240, 314 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 720, 0, 240, 314 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 240, 314 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 314, 240, 314 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 314, 240, 314 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 314, 240, 314 )

[sub_resource type="AtlasTexture" id=112]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 720, 314, 240, 314 )

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 314, 240, 314 )

[sub_resource type="AtlasTexture" id=114]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 628, 240, 314 )

[sub_resource type="AtlasTexture" id=115]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 628, 240, 314 )

[sub_resource type="AtlasTexture" id=116]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 628, 240, 314 )

[sub_resource type="AtlasTexture" id=117]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 720, 628, 240, 314 )

[sub_resource type="AtlasTexture" id=118]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 628, 240, 314 )

[sub_resource type="AtlasTexture" id=119]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 942, 240, 314 )

[sub_resource type="AtlasTexture" id=120]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 942, 240, 314 )

[sub_resource type="AtlasTexture" id=121]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 942, 240, 314 )

[sub_resource type="AtlasTexture" id=122]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 720, 942, 240, 314 )

[sub_resource type="AtlasTexture" id=123]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 942, 240, 314 )

[sub_resource type="SpriteFrames" id=83]
animations = [ {
"frames": [ SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ) ],
"loop": true,
"name": "default",
"speed": 20.0
}, {
"frames": [ SubResource( 125 ), SubResource( 135 ), SubResource( 126 ), SubResource( 136 ), SubResource( 137 ) ],
"loop": true,
"name": "down",
"speed": 20.0
}, {
"frames": [ SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ) ],
"loop": true,
"name": "up",
"speed": 40.0
} ]

[sub_resource type="AnimationNodeAnimation" id=128]
animation = "RESET"

[sub_resource type="AnimationNodeAnimation" id=129]
animation = "mode_down"

[sub_resource type="AnimationNodeAnimation" id=140]
animation = "move_left"

[sub_resource type="AnimationNodeAnimation" id=141]
animation = "move_right"

[sub_resource type="AnimationNodeAnimation" id=130]
animation = "move_up"

[sub_resource type="AnimationNodeStateMachineTransition" id=131]

[sub_resource type="AnimationNodeStateMachineTransition" id=132]

[sub_resource type="AnimationNodeStateMachineTransition" id=133]

[sub_resource type="AnimationNodeStateMachineTransition" id=134]

[sub_resource type="AnimationNodeStateMachineTransition" id=142]

[sub_resource type="AnimationNodeStateMachineTransition" id=143]

[sub_resource type="AnimationNodeStateMachineTransition" id=144]

[sub_resource type="AnimationNodeStateMachineTransition" id=145]

[sub_resource type="AnimationNodeStateMachineTransition" id=146]

[sub_resource type="AnimationNodeStateMachineTransition" id=147]

[sub_resource type="AnimationNodeStateMachineTransition" id=148]

[sub_resource type="AnimationNodeStateMachineTransition" id=149]

[sub_resource type="AnimationNodeStateMachineTransition" id=150]

[sub_resource type="AnimationNodeStateMachineTransition" id=151]

[sub_resource type="AnimationNodeStateMachineTransition" id=152]

[sub_resource type="AnimationNodeStateMachine" id=43]
states/RESET/node = SubResource( 128 )
states/RESET/position = Vector2( 306, 173 )
states/move_down/node = SubResource( 129 )
states/move_down/position = Vector2( 312, 291 )
states/move_left/node = SubResource( 140 )
states/move_left/position = Vector2( 129, 173 )
states/move_right/node = SubResource( 141 )
states/move_right/position = Vector2( 485, 173 )
states/move_up/node = SubResource( 130 )
states/move_up/position = Vector2( 301, 62 )
transitions = [ "RESET", "move_down", SubResource( 131 ), "move_down", "RESET", SubResource( 132 ), "RESET", "move_up", SubResource( 133 ), "move_up", "RESET", SubResource( 134 ), "RESET", "move_right", SubResource( 142 ), "move_right", "RESET", SubResource( 143 ), "move_left", "RESET", SubResource( 144 ), "RESET", "move_left", SubResource( 145 ), "move_up", "move_left", SubResource( 146 ), "move_up", "move_right", SubResource( 147 ), "move_left", "move_up", SubResource( 148 ), "move_left", "move_down", SubResource( 149 ), "move_down", "move_left", SubResource( 150 ), "move_right", "move_down", SubResource( 151 ), "move_down", "move_right", SubResource( 152 ) ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=44]

[sub_resource type="CircleShape2D" id=153]
radius = 25.9615

[node name="Personaje" type="KinematicBody2D" groups=["personaje"]]
position = Vector2( 200, 540 )
script = ExtResource( 2 )
velocidad = 800

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/RESET = SubResource( 46 )
anims/mode_down = SubResource( 124 )
anims/move_left = SubResource( 139 )
anims/move_right = SubResource( 138 )
anims/move_up = SubResource( 45 )

[node name="AnimationDamage" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/RESET = SubResource( 154 )
anims/take_damage = SubResource( 155 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 83 )
frame = 4
playing = true
flip_h = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 43 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 44 )

[node name="CadenciaTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="DisparoPos" type="Position2D" parent="."]

[node name="AreaDamage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDamage"]
self_modulate = Color( 0.898039, 0.737255, 0.113725, 1 )
shape = SubResource( 153 )

[connection signal="timeout" from="CadenciaTimer" to="." method="_on_CadenciaTimer_timeout"]
[connection signal="area_entered" from="AreaDamage" to="." method="_on_AreaDamage_area_entered"]
